--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,88 +6,110 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-
     <ImageView
         android:id="@+id/fondo_login"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@mipmap/fondo1"
         android:contentDescription="@string/imagen"
-        android:scaleType="fitXY"/>
-
-    <!--
-    <ImageView
-        android:id="@+id/fondo_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/label2"
-        android:layout_marginTop="60dp"
-        android:contentDescription="@string/imagen"
-        app:srcCompat="@mipmap/fondo2" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/fondo_animado"
-        android:contentDescription="@string/imagen"
-        android:scaleType="centerCrop"/>
-        -->
+        android:scaleType="fitXY"
+        app:srcCompat="@mipmap/fondo1" />
 
     <TextView
         android:id="@+id/label1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        style="@style/labels"
         android:layout_marginTop="20dp"
         android:text="@string/mis_tareas"
         android:textColor="@color/gris"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        android:layout_centerHorizontal="true"
-        />
+        android:textSize="40sp" />
 
     <TextView
         android:id="@+id/label2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        style="@style/labels"
         android:layout_below="@+id/label1"
         android:layout_marginTop="10dp"
         android:text="@string/mgc"
-        android:textColor="@color/gris_claro"
+        android:textColor="@color/colorAccent"
+        android:textSize="20sp" />
+
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/label2"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/colorAccent_alfa"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <EditText
+            android:id="@+id/editText"
+            style="@style/edit_texts"
+            android:hint="@string/usuario"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            tools:targetApi="o">
+            <requestFocus />
+
+        </EditText>
+
+        <EditText
+            android:id="@+id/editText2"
+            style="@style/edit_texts"
+            android:hint="@string/password"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            tools:targetApi="o" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/boton_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/boton"
+        android:text="@string/login"
+        android:textColor="@color/colorAmarilloClarito"
         android:textSize="20sp"
+        android:textStyle="bold"
+        android:onClick="login"/>
+
+    <TextView
+        android:id="@+id/crear_cuenta"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/boton_login"
         android:layout_centerHorizontal="true"
-        android:textStyle="bold"/>
+        android:layout_marginTop="20dp"
+        android:text="@string/crear_cuenta"
+        android:textColor="@color/colorAmarilloClarito"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:onClick="crearCuenta"/>
 
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="87dp"
-        android:layout_marginTop="165dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/usuario"
-        android:importantForAutofill="no" tools:targetApi="o"
-        android:labelFor="@id/editText"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"/>
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+    <ImageView
+        android:id="@+id/usuario"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_alignStart="@+id/candado"
         android:layout_marginStart="0dp"
-        android:ems="10"
-        android:importantForAutofill="no"
-        android:inputType="textPassword"
-        android:labelFor="@id/editText2"
-        android:text="@string/password" tools:targetApi="o"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"/>
+        android:layout_marginTop="194dp"
+        android:contentDescription="@string/imagen"
+        app:srcCompat="@mipmap/usuario" />
+
+    <ImageView
+        android:id="@+id/candado"
+        android:layout_width="60dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/usuario"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="5dp"
+        android:contentDescription="@string/imagen"
+        app:srcCompat="@mipmap/candado" />
 
 </RelativeLayout>
