--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,13 @@
 <resources>
     <color name="colorPrimary">#5c6bc0</color>
     <color name="colorPrimaryDark">#1a237e</color>
-    <color name="colorAccent">#fff59d</color>
+    <color name="colorAccent">#9b8d19</color>
+    <color name="colorAmarilloClarito">#fff59d</color>
     <color name="alfa1">#337986cb</color>
     <color name="alfa2">#CC283593</color>
     <color name="gris">#546e7a</color>
     <color name="gris_claro">#78909c</color>
+    <color name="colorAccent_alfa">#99fff59d</color>
+    <color name="alfa3">#339b8d19</color>
+    <color name="alfa4">#CCfff59d</color>
 </resources>
