--- a/app/src/main/res/layout/toast.xml
+++ b/app/src/main/res/layout/toast.xml
@@ -4,22 +4,24 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="10dp"
-    android:background="@color/colorAccent_alfa"
-    >
+    android:background="@drawable/toast_drawable">
 
     <ImageView android:id="@+id/image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="10dp"
         android:contentDescription="@string/imagen" />
 
     <TextView android:id="@+id/text"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:textColor="@color/colorPrimaryDark"
+        android:layout_width="175dp"
+        android:layout_height="35dp"
+        android:textColor="@color/colorAmarilloClarito"
         android:textSize="20sp"
         android:textStyle="bold"
         android:shadowColor="@color/colorAccent"
+        android:gravity="center"
+        android:fontFamily="sans-serif"
+
         />
 
 </LinearLayout>
