--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,13 +32,9 @@
         android:textSize="20sp" />
 
     <LinearLayout
+        style="@style/login_linear"
         android:id="@+id/linear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_below="@id/label2"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="16dp"
         android:background="@color/colorAccent_alfa"
         android:orientation="vertical"
         android:padding="10dp">
@@ -65,51 +61,41 @@
     </LinearLayout>
 
     <Button
+        style="@style/login_buton_view"
         android:id="@+id/boton_login"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_below="@id/linear"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/boton"
         android:text="@string/login"
         android:textColor="@color/colorAmarilloClarito"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:onClick="login"/>
 
     <TextView
+        style="@style/login_buton_view"
         android:id="@+id/crear_cuenta"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_below="@id/boton_login"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
         android:text="@string/crear_cuenta"
         android:textColor="@color/colorAmarilloClarito"
-        android:textSize="20sp"
-        android:textStyle="bold"
         android:onClick="crearCuenta"/>
 
     <ImageView
+        style="@style/login_image"
         android:id="@+id/usuario"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
         android:layout_alignStart="@+id/candado"
         android:layout_marginStart="0dp"
         android:layout_marginTop="194dp"
-        android:contentDescription="@string/imagen"
         app:srcCompat="@mipmap/usuario" />
 
     <ImageView
+        style="@style/login_image"
         android:id="@+id/candado"
-        android:layout_width="60dp"
-        android:layout_height="40dp"
         android:layout_below="@+id/usuario"
         android:layout_marginStart="28dp"
         android:layout_marginTop="5dp"
-        android:contentDescription="@string/imagen"
         app:srcCompat="@mipmap/candado" />
 
 </RelativeLayout>
