--- a/app/src/main/res/anim/animacion1.xml
+++ b/app/src/main/res/anim/animacion1.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:startOffset="3000">
 
     <translate
         android:fromYDelta="1200"
-        android:duration="4000"/>
+        android:duration="5000"/>
 
     <alpha
-        android:duration="4000"
+        android:duration="5000"
         android:fromAlpha="0"
         android:toAlpha="1"/>
 
