--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,27 +7,27 @@
     tools:context=".SplashActivity">
 
     <ImageView
+        style="@style/splash_view"
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         app:srcCompat="@drawable/mar"
         android:contentDescription="@string/imagen"
         android:scaleType="fitXY"/>
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/splash_view"
         android:background="@drawable/gradient"/>
 
     <TextView
+        style="@style/splash_palabras"
+        android:id="@+id/texto_mis"
+        android:layout_marginTop="50dp"
+        android:text="@string/mis"/>
+
+    <TextView
+        style="@style/splash_palabras"
         android:id="@+id/texto_tarea"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/mis_tareas"
-        android:textColor="@android:color/white"
-        android:textSize="40sp"
-        android:textAlignment="center"
-        android:layout_marginTop="35dp"
-        />
+        android:layout_marginTop="120dp"
+        android:text="@string/mis_tareas"/>
+
 
 </FrameLayout>
