--- a/app/src/main/res/layout/toast.xml
+++ b/app/src/main/res/layout/toast.xml
@@ -6,22 +6,23 @@
     android:padding="10dp"
     android:background="@drawable/toast_drawable">
 
-    <ImageView android:id="@+id/image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginEnd="10dp"
-        android:contentDescription="@string/imagen" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="41dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:contentDescription="@string/imagen"/>
 
-    <TextView android:id="@+id/text"
-        android:layout_width="175dp"
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="224dp"
         android:layout_height="35dp"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:shadowColor="@color/colorAccent"
         android:textColor="@color/colorAmarilloClarito"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:shadowColor="@color/colorAccent"
-        android:gravity="center"
-        android:fontFamily="sans-serif"
-
-        />
+        android:textStyle="bold"/>
 
 </LinearLayout>
